--- a/FrontEndG4/src/app/components/main/artikl/artikl.component.html
+++ b/FrontEndG4/src/app/components/main/artikl/artikl.component.html
@@ -1,1 +1,44 @@
-<p>artikl works!</p>
+<mat-toolbar color="accent">
+    <span class="title-center">Artikl</span>
+  </mat-toolbar>
+  
+  <div class="container mat-elavation-z8">
+    <mat-table [dataSource]="dataSource" class="mat-cell">
+      <!--ID-->
+      <ng-container matColumnDef="naziv">
+        <mat-header-cell *matHeaderCellDef>NAZIV</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.naziv }}</mat-cell>
+      </ng-container>
+      <!--Naziv-->
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
+      </ng-container>
+      <!-- Proizvodjac -->
+      <ng-container matColumnDef="proizvodjac">
+        <mat-header-cell *matHeaderCellDef>Proizvodjac</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.proizvodjac }}</mat-cell>
+      </ng-container>
+      <!-- Action Buttons -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef>
+          <button mat-icon-button color="accent" (click)="openDialog(1)">
+            <mat-icon>add</mat-icon>
+          </button>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let row; let i = index">
+          <button mat-icon-button color="primary" (click)="openDialog(2,row.id, row.naziv, row.proizvodjac)">
+            <mat-icon color="primary" aria-label="Edit">edit</mat-icon>
+          </button>
+          <button mat-icon-button color="primary" (click)="openDialog(3,row.id, row.naziv, row.proizvodjac)">
+            <mat-icon color= "warn" aria-label="Delete">delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row
+        style="cursor: pointer;"
+        *matRowDef="let row; columns: displayedColumns">
+      </mat-row>
+    </mat-table>
+  </div>
