--- a/FrontEndG4/src/app/components/main/artikl/artikl.component.html
+++ b/FrontEndG4/src/app/components/main/artikl/artikl.component.html
@@ -3,15 +3,20 @@
   </mat-toolbar>
 
   <div class="container mat-elavation-z8">
-    <mat-table [dataSource]="dataSource" class="mat-cell">
+    <div class="filter-field">
+      <mat-form-field subscriptSizing="dynamic">
+        <input matInput placeholder="Pretraga .. " name="Filter" (keyup)="applyFilter($event)"/>
+      </mat-form-field>
+    </div>
+    <mat-table matSort [dataSource]="dataSource" class="mat-cell">
       <!--Naziv-->
       <ng-container matColumnDef="naziv">
-        <mat-header-cell *matHeaderCellDef>NAZIV</mat-header-cell>
+        <mat-header-cell mat-sort-header *matHeaderCellDef>NAZIV</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.naziv }}</mat-cell>
       </ng-container>
       <!--ID-->
       <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+        <mat-header-cell mat-sort-header *matHeaderCellDef>ID</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
       </ng-container>
       <!-- Proizvodjac -->
@@ -41,4 +46,6 @@
         *matRowDef="let row; columns: displayedColumns">
       </mat-row>
     </mat-table>
+
+    <mat-paginator [length]="20" [pageSize]="6" [pageSizeOptions]="[3,6,9,12]" ></mat-paginator>
   </div>
